--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DYMessageLite">
+        android:theme="@style/Theme.DYMessageLite"
+        >
+        <activity
+            android:name=".ui.detail.MessageDetailActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize">
+
+        </activity>
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true">
