--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DYMessageLite"
-        >
+        android:theme="@style/Theme.DYMessageLite">
+        <activity
+            android:name=".ui.dashboard.DashboardActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.detail.MessageDetailActivity"
             android:exported="false"
